fluxcd/monitoring/controllers/base/kube-prometheus-stack/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
  labels:
    # pod-security.kubernetes.io/enforce: privileged
    app.kubernetes.io/component: monitoring
