fluxcd/monitoring/controllers/base/kube-prometheus-stack/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-kube-prometheus-stack
  # namespace: kube-system
spec:
  ingressClassName: cilium
  rules:
  - http:
      paths:
      - backend:
          service:
            name: kube-prometheus-stack-grafana
            port:
              number: 80
        # It has to be / since there is no rewrite-target so e.g. <ingress_ip>/monitoring will not work
        path: /.*
        pathType: Prefix
